# jos-stam-fluid-simulator

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_cpu.bat  build_gpu_lib.bat
cuinc/: minmax.hpp
cusrc/: fluid_gpu.cu  minmax.cu
inc/: fluid.hpp  fluid_cpu.hpp  fluid_gpu.hpp  utils.hpp  window_wrapper.hpp
src/: fluid.cpp  fluid_cpu.cpp  main.cpp
